# BookFiler-Widget-QT-Sort-Filter-Table

./: .gitignore  CMakeLists.txt  README.md
dev/: readme.md
include/BookFiler-Lib-Sort-Filter-Table-Widget/: Interface.hpp
resources/: icons.qrc  readme.md
src/QModel/: SqliteModel.cpp  SqliteModel.hpp  SqliteModelIndex.cpp  SqliteModelIndex.hpp  SqliteModelTest.cpp  SqliteModelTest.hpp
src/UI/: ItemDelegate.cpp  ItemDelegate.hpp  ItemEditor.cpp  ItemEditor.hpp  ItemModel.cpp  ItemModel.hpp  MainWidget.cpp  MainWidget.hpp  TableItem.cpp  TableItem.hpp
src/core/: config.hpp
src_example/example00/: CMakeLists.txt  main.cpp
